Product endpoints added
