# Domain/Models/Category.cs
@@ -8,5 +8,10 @@ namespace Domain.Models
 {
     public class Category: EntityBase
     {
+        public string Name { get; set; }
+        public string? ImgUrl { get; set; }
+
+        public Guid? ParentCategoryId { get; set; }
+        public Category? ParentCategory { get; set; }
     }
 }
